--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
- <title>First Class Beauty - Eyeliner</title>
+ <title>First Class Beauty - Mascara</title>
  <meta charset="utf-8">
  <style>
   
@@ -39,30 +39,30 @@
     background-color: lightblue;
     color: black;
   }
-  #Eyeliner {
+  #Mascara {
     background-color: lightpink;
     height: 2000px;
   }
-  #Eyeliner h1 {
+  #Mascara h1 {
      text-align: center;
      padding-top: 30px;
      font-family: Copperplate;
      font-size: 65px;
      margin-top: 20;
   }
-   #Eyeliner h2 {
+   #Mascara h2 {
      text-align: center;
      font-family: Papyrus;
      font-size: 25px;
   }
-   #Eyeliner h3 {
+   #Mascara h3 {
      text-align: center;
      margin-left: 15px;
      font-size: 40px; 
      font-family: Copperplate;
      padding-top: 50px;
    }
-   #Eyeliner p {
+   #Mascara p {
      text-align: center;
      margin-left: 20px;
      font-size: 25px;
@@ -112,19 +112,60 @@
     <a href="#About">About</a>
 </div>
 
-<div id="Eyeliner">
-  <h1>Eyeliner</h1>
+<div id="Mascara">
+  <h1>Mascara</h1>
   <h2>Find The Best Makeup Products Just For You!</h2>
-  <h3>Top 5 Eyeliners</h3>
+  <h3>Top 5 Mascaras</h3>
   
-<p><b><i>Chanel Stylo Teux Waterproof Long-Lasting Eyeliner</i></b>
-    <img src="chanel eyeliner.jpeg" alt="Chanel Eyeliner"
+<p><b><i>Honest Beauty Extreme Length Mascara + Lash Primer</i></b>
+    <img src="honest mascara.jpeg" alt="Honest Mascara"
          style="float:left;width:300px;height:250px;border-radius:20px;"><p>
-    This waterproof and smudge proof eyeliner is long lasting with its soft texture
-    that glides on smoothly creating an even line. Comes with a detachable sharpener 
-    that helps to ensure ultra-precise application.</p>
+    This double ended mascara consits of both primer and mascara on each end. 
+    This smooth mascara enhanced and lengthens your eyelashes giving them a high
+    lift. Sold in packs of 1-3 products in one purchase.</p>
       <div class="shopbutton">
-       <a href="https://www.nordstrom.com/s/chanel-stylo-yeux-waterproof-long-lasting-eyeliner/6056777" 
+       <a href="https://www.honest.com/beauty-products/extreme-length-mascara-and-lash-primer/honest-lengthening-mascara.html" 
+         target="_blank">Shop Now!</a></div>
+</p>
+  
+<p><b><i>Lancôme Définicils High Definition Mascara</i></b>
+    <img src="lancome mascara.jpeg" alt="Lancome Mascara"
+         style="float:left;width:300px;height:250px;border-radius:20px;"><p>
+    This mascara helps to create a long lash look and includes flake free and
+    non-clumping formulas. Available in two shades of black and deep brown.</p>
+      <div class="shopbutton">
+       <a href="https://www.sephora.com/product/definicils-high-definition-mascara-P54450" 
+         target="_blank">Shop Now!</a></div>
+</p>
+ 
+<p><b><i>Dior Diorshow Waterproof Mascara</i></b>
+    <img src="dior mascara.jpeg" alt="Dior Mascara"
+         style="float:left;width:300px;height:250px;border-radius:20px;"><p>
+    This mascara helps to lengthen, thicken, and curve your lashes. With its
+    waterproof formula it keeps your lashes looking great all day. Available 
+    in two shades jet black and brown.</p>
+      <div class="shopbutton">
+       <a href="https://www.sephora.com/product/diorshow-waterproof-mascara-P99901" 
+         target="_blank">Shop Now!</a></div>
+</p>
+
+<p><b><i>Ilia Limitless Lash Mascara</i></b>
+    <img src="ilia mascara.jpeg" alt="Ilia Mascara"
+         style="float:left;width:300px;height:250px;border-radius:20px;"><p>
+    This mascara lengthens, lifts, and separates your lashes leaving them looking fabulous
+    all day and everyday. Available in two different sizes, mini and standard. </p>
+      <div class="shopbutton">
+       <a href="https://www.sephora.com/product/limitless-lash-mascara-P431750" 
+         target="_blank">Shop Now!</a></div>
+</p>
+
+<p><b><i>Maybelline New York Lash Sensational Sky High Mascara</i></b>
+    <img src="maybelline mascara .jpeg" alt="Maybelline Mascara"
+         style="float:left;width:300px;height:250px;border-radius:20px;"><p>
+    This sky high mascara lengthens and volumizes your lashes giving you a long lash look
+    from every angle. Available in two shades very black and brownish black.</p>
+      <div class="shopbutton">
+       <a href="https://www.maybelline.ca/en-ca/all-products/eye-makeup/mascara/lash-sensational-sky-high-waterproof-mascara?variant=Very+Black" 
          target="_blank">Shop Now!</a></div>
 </p>
 </div>
